dist/LineScript-win64-20260615/tests/cases/compile_fail/compound_assign_type_error.lsc
main() -> i64 do
  declare x: f64 = 1.5
  x %= 2.0
  return 0
end
